--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "can.h": "c",
         "stm32l4xx_hal_conf.h": "c",
         "stm32l4xx_hal_rcc.h": "c",
-        "canbus.h": "c"
+        "canbus.h": "c",
+        "stm32l4xx_hal.h": "c"
     }
 }
